# fastapi-todo

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6a8027d3174b_initial_migration.py
app/: main.py
app/api/v1/: __init__.py  auth.py  todos.py
app/core/: config.py
app/crud/: base.py
app/models/: todo.py  user.py
app/schemas/: todo.py
app/services/: auth.py  user.py
app/tests/: test_auth.py  test_root.py
